// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip /> should allow to animate tooltip: Enter: Tooltip in dom 1`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="tooltip-inner jp-slide-in-down-menu-enter-done"
    >
      Bar
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should allow to animate tooltip: Enter: Tooltip not in dom 1`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> should allow to animate tooltip: Exit: Tooltip in dom 1`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="tooltip-inner jp-slide-in-down-menu-exit"
    >
      Bar
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should allow to animate tooltip: Exit: Tooltip not in dom 1`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> should also render tooltip when using click as trigger 1`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> should also render tooltip when using click as trigger 2`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="tooltip-inner"
    >
      Bar
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should also render tooltip when using click as trigger 3`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> should automatically close tooltip when disabled prop changes 1`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="tooltip-inner"
    >
      Bar
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should automatically close tooltip when disabled prop changes 2`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> should be able render inside another container using portals 1`] = `
<div>
  <div
    class="test-container"
  >
    <div
      class="junipero tooltip"
      data-floating-ui-focusable=""
      data-placement="top"
      style="position: fixed; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="tooltip-inner"
      >
        Bar
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should keep animated tooltip in dom if apparition is css: Enter: Tooltip already in dom 1`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  />
</div>
`;

exports[`<Tooltip /> should keep animated tooltip in dom if apparition is css: Enter: Tooltip still in dom 1`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="tooltip-inner jp-slide-in-down-menu-enter-done"
    >
      Bar
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should keep animated tooltip in dom if apparition is css: Exit: Tooltip still in dom 1`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  />
</div>
`;

exports[`<Tooltip /> should render 1`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> should render 2`] = `
<div>
  <span>
    Foo
  </span>
  <div
    class="junipero tooltip"
    data-floating-ui-focusable=""
    data-placement="top"
    style="position: fixed; top: 0px; left: 0px;"
    tabindex="-1"
  >
    <div
      class="tooltip-inner"
    >
      Bar
    </div>
  </div>
</div>
`;

exports[`<Tooltip /> should render 3`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;

exports[`<Tooltip /> shouldn't open tooltip if disabled 1`] = `
<div>
  <span>
    Foo
  </span>
</div>
`;
